1998-06-03  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (gridexamples.sgml): Remove unnecessary subshell for
	`for' loop and don't cd to $(srcdir) when done (it's in a
	subshell).

1998-06-01  Alex Lancaster  <alex@santafe.edu>

	* grid: Moved the grid subdir to the root of the Swarm application
	source tree and renamed to gridturtle.

	* Makefile.am (gridexamples.sgml): After changing directories into
	$(gridturtle_srcdir) - change directory back to $(srcdir) to
	restore location.

1998-06-01  Marcus G. Daniels  <mgd@mogollon.santafe.edu>

	* Makefile.am (swarm_srcdir, gridturtle_srcdir): New variables
	which get substituted assignments from configure.  Use them
	instead of $(SWARMHOME) and $(srcdir)/grid.

1998-06-01  Alex Lancaster  <alex@santafe.edu>

	* grid-app.sgml: Fixed incorrect LINKENDS and descriptions for
	grid5.m and grid6.m.

1998-05-29  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* probes-app.sgml: Update LINKENDs per new ID conventions.

1998-05-26  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Makefile.am (refindex.sgml $(PAGES)): Add $(top_srcdir)/protocol.el
	and $(top_srcdir)/common.el as dependents.
	(refindex.sgml $(PAGES)): Set SWARMDOCS environment variable to
	the fully-resolved top_srcdir.

1998-05-23  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* refbook.sgml.in: New file.

	* refbook.tex.in: New file.

	* refbook.sgml: Removed.

	* Makefile.am: New file.

	* Makefile: Remove.

	* src.ent.in: New file.

	* src.ent: Removed.

1998-05-22  Marcus G. Daniels  <mgd@ute.santafe.edu>

	* Begin revision log.
