@@ -6,7 +6,7 @@ gridturtle_srcdir = @gridturtle_srcdir@
 
 include $(top_srcdir)/Makefile.rules
 
-CLEANFILES = *.htm $(NAME).tex _$(NAME).tex refbook.rtf
+CLEANFILES = *.htm $(NAME).tex _$(NAME).tex $(NAME).rtf
 
 PAGES = activity/activitypages.sgml \
 	analysis/analysispages.sgml \
@@ -47,3 +47,8 @@ refindex.sgml $(PAGES): $(swarm_srcdir)/src/activity/activity.h \
 	$(swarm_srcdir)/src/simtoolsgui/simtoolsgui.h \
 	$(swarm_srcdir)/src/space/space.h $(top_srcdir)/protocol.el $(top_srcdir)/common.el
 	SWARMDOCS=`cd $(top_srcdir); pwd`/ SWARMDOCS_BUILD_AREA=$(top_builddir)/ $(EMACS) -batch -l $(top_srcdir)/protocol.el -f run-all $(swarm_srcdir)
+v
+
+# Local variables:
+# mode: makefile
+# end:
